// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizes 1`] = `
Array [
  Object {
    "col": 2,
    "kind": 0,
    "line": 1,
    "value": "(",
  },
  Object {
    "col": 3,
    "kind": 0,
    "line": 1,
    "value": ")",
  },
  Object {
    "col": 5,
    "kind": 0,
    "line": 1,
    "value": "...",
  },
  Object {
    "col": 8,
    "kind": 0,
    "line": 1,
    "value": "[",
  },
  Object {
    "col": 10,
    "kind": 0,
    "line": 1,
    "value": "]",
  },
]
`;

exports[`tokenizes 2`] = `
Array [
  Object {
    "col": 1,
    "kind": 0,
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 4,
    "kind": 1,
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 5,
    "kind": 0,
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 3`] = `
Array [
  Object {
    "col": 1,
    "kind": 0,
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 4,
    "kind": 1,
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 4,
    "kind": 0,
    "line": 1,
    "value": "(",
  },
  Object {
    "col": 8,
    "kind": 1,
    "line": 1,
    "value": "arg",
  },
  Object {
    "col": 8,
    "kind": 0,
    "line": 1,
    "value": ":",
  },
  Object {
    "col": 11,
    "kind": 2,
    "line": 1,
    "value": "5",
  },
  Object {
    "col": 11,
    "kind": 0,
    "line": 1,
    "value": ")",
  },
  Object {
    "col": 13,
    "kind": 0,
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 4`] = `
Array [
  Object {
    "col": 1,
    "kind": 0,
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 4,
    "kind": 1,
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 4,
    "kind": 0,
    "line": 1,
    "value": "(",
  },
  Object {
    "col": 8,
    "kind": 1,
    "line": 1,
    "value": "arg",
  },
  Object {
    "col": 8,
    "kind": 0,
    "line": 1,
    "value": ":",
  },
  Object {
    "col": 17,
    "kind": 3,
    "line": 1,
    "value": "-5.4e+3",
  },
  Object {
    "col": 17,
    "kind": 0,
    "line": 1,
    "value": ")",
  },
  Object {
    "col": 19,
    "kind": 0,
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 5`] = `
Array [
  Object {
    "col": 1,
    "kind": 0,
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 4,
    "kind": 1,
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 4,
    "kind": 0,
    "line": 1,
    "value": "(",
  },
  Object {
    "col": 8,
    "kind": 1,
    "line": 1,
    "value": "arg",
  },
  Object {
    "col": 8,
    "kind": 0,
    "line": 1,
    "value": ":",
  },
  Object {
    "col": 18,
    "kind": 4,
    "line": 1,
    "value": "what up",
  },
  Object {
    "col": 19,
    "kind": 0,
    "line": 1,
    "value": ")",
  },
  Object {
    "col": 21,
    "kind": 0,
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 6`] = `
Array [
  Object {
    "col": 1,
    "kind": 0,
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 4,
    "kind": 1,
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 4,
    "kind": 0,
    "line": 1,
    "value": "(",
  },
  Object {
    "col": 8,
    "kind": 1,
    "line": 1,
    "value": "arg",
  },
  Object {
    "col": 8,
    "kind": 0,
    "line": 1,
    "value": ":",
  },
  Object {
    "col": 20,
    "kind": 4,
    "line": 1,
    "value": "	what up",
  },
  Object {
    "col": 21,
    "kind": 0,
    "line": 1,
    "value": ")",
  },
  Object {
    "col": 23,
    "kind": 0,
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 7`] = `
Array [
  Object {
    "col": 1,
    "kind": 0,
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 4,
    "kind": 1,
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 4,
    "kind": 0,
    "line": 1,
    "value": "(",
  },
  Object {
    "col": 8,
    "kind": 1,
    "line": 1,
    "value": "arg",
  },
  Object {
    "col": 8,
    "kind": 0,
    "line": 1,
    "value": ":",
  },
  Object {
    "col": 20,
    "kind": 4,
    "line": 1,
    "value": "\\" up",
  },
  Object {
    "col": 21,
    "kind": 0,
    "line": 1,
    "value": ")",
  },
  Object {
    "col": 23,
    "kind": 0,
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 8`] = `
Array [
  Object {
    "col": 1,
    "kind": 0,
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 5,
    "kind": 1,
    "line": 2,
    "value": "x",
  },
  Object {
    "col": 2,
    "kind": 0,
    "line": 3,
    "value": "}",
  },
]
`;

exports[`tokenizes 9`] = `
Array [
  Object {
    "col": 1,
    "kind": 0,
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 4,
    "kind": 1,
    "line": 1,
    "value": "x",
  },
  Object {
    "col": 6,
    "kind": 0,
    "line": 1,
    "value": "}",
  },
]
`;

exports[`tokenizes 10`] = `
Array [
  Object {
    "col": 1,
    "kind": 0,
    "line": 1,
    "value": "{",
  },
  Object {
    "col": 5,
    "kind": 1,
    "line": 3,
    "value": "x",
  },
  Object {
    "col": 2,
    "kind": 0,
    "line": 4,
    "value": "}",
  },
]
`;
